# idac

./: .gitignore  CMakeLists.txt  README.md
data/: idapro.hexlic  licenses.json
scripts/: all_platform_93_idakeygen.py  ida_keygen.py
src/: main.cpp
